--- a/src/style.css
+++ b/src/style.css
@@ -120,7 +120,7 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #2d3748;
   }
 }
 
